Fix overflow of whitespace problem.

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,8 @@
 
+body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
